Bug 371611. crash nsIScriptableDateFormat::FormatDate for undefined year, month, day. Patch by Ryan Jones <sciguyryan@gmail.com>. r=smontagu, sr=biesi